Fix overflow on carousel

--- a/src/components/AboutMe/Prints.css
+++ b/src/components/AboutMe/Prints.css
@@ -35,7 +35,8 @@
 }
 
 .prints-container {
-    width: 100%;
-    justify-items: center;
-    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
